--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "scripts": {
-    "tailwind": "tailwindcss -i ./public/styles/index.css -o ./public/dist/index.css --watch"
+    "concurrently": "concurrently \"yarn:tailwind-*\"",
+    "tailwind-home": "tailwindcss -i ./public/styles/index.css -o ./public/dist/index.css --watch",
+    "tailwind-about": "tailwindcss -i ./public/styles/about.css -o ./public/dist/about.css --watch"
   },
   "devDependencies": {
+    "concurrently": "^7.1.0",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.23"
