feat: complete case-study page

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "concurrently": "concurrently \"yarn:tailwind-*\"",
     "tailwind-home": "tailwindcss -i ./public/styles/index.css -o ./public/dist/index.css --watch",
     "tailwind-about": "tailwindcss -i ./public/styles/about.css -o ./public/dist/about.css --watch",
-    "tailwind-services": "tailwindcss -i ./public/styles/services.css -o ./public/dist/services.css --watch"
+    "tailwind-services": "tailwindcss -i ./public/styles/services.css -o ./public/dist/services.css --watch",
+    "tailwind-case-study": "tailwindcss -i ./public/styles/case-study.css -o ./public/dist/case-study.css --watch"
   },
   "devDependencies": {
     "concurrently": "^7.1.0",
